[package]
name = "fastiron"
version = "1.3.2"
edition = "2021"

# DEPENDENCIES

[dependencies]
clap = { version = "*", features = ["cargo", "derive"] }
serde_yaml = { version = "*", features = [] }
num = { version = "*" }
rand = { version = "*", features = ["small_rng"] }
tinyvec = { version = "*" }
rayon = { version = "*" }
atomic = { version = "0.5.3" } # further upgrade == breaking change
hwloc2 = { version = "2.2.0" }
libc = { version = "*" }
rustc-hash = { version = "*" }

[dev-dependencies]
criterion = { version = "*", features = ["html_reports"] }

# FEATURES
[features]
single-precision = []

# BENCH

[[bench]]
name = "rng_benchmark"
harness = false

[[bench]]
name = "mct_cross_product"
harness = false

[[bench]]
name = "snap_turtle"
harness = false
