[package]
name = "fastiron"
version = "1.3.2"
edition = "2021"

# DEPENDENCIES

[dependencies]
clap = { version = "4.5.8", features = ["cargo", "derive"] }
serde_yaml = { version = "0.9.34", features = [] }
num = { version = "0.4.3" }
rand = { version = "0.8.5", features = ["small_rng"] }
tinyvec = { version = "1.6.1" }
rayon = { version = "1.10.0" }
atomic = { version = "0.5.3" } # further upgrade == breaking change
hwloc2 = { version = "2.2.0" } # should be replaced with hwlocality
libc = { version = "0.2.155" }
rustc-hash = { version = "2.0.0" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

# FEATURES
[features]
single-precision = []

# BENCH

[[bench]]
name = "rng_benchmark"
harness = false

[[bench]]
name = "mct_cross_product"
harness = false

[[bench]]
name = "snap_turtle"
harness = false
