[package]
name = "fastiron"
version = "1.3.2"
edition = "2021"

# DEPENDENCIES

[dependencies]
clap = { workspace = true, features = ["cargo", "derive"] }
serde_yaml = { workspace = true }
num = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
tinyvec = { workspace = true }
rayon = { workspace = true }
atomic = { workspace = true }
bytemuck = { workspace = true }
hwlocality = { workspace = true } 
libc = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }

# BENCH

[[bench]]
name = "rng_benchmark"
harness = false

[[bench]]
name = "mct_cross_product"
harness = false

[[bench]]
name = "snap_turtle"
harness = false
